--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -46,7 +46,7 @@ jobs:
           &&
           curl -L 
           -H "Accept: application/vnd.github+json" 
-          -H "Authorization: Bearer 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" 
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/repos/ReckeYi/Github_Automated_tests/actions/artifacts/$REPORT_ID/zip 
           -o pages.zip
