--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,7 +30,7 @@ jobs:
           ARTIFACT_ID=$(curl -L
           -H "Accept: application/vnd.github+json" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
-          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=test-results" 
+          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results" 
           | python -c "import sys, json; print(json.load(sys.stdin)['artifacts'][0]['id']);") 
           &&
           curl -L
@@ -51,15 +51,15 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/repos/ReckeYi/Github_Automated_tests/actions/artifacts/$REPORT_ID/zip 
           -o pages.zip
-      - run: mkdir test-results && unzip artifacts.zip -d test-results
+      - run: mkdir allure-results && unzip artifacts.zip -d allure-results
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
-      - run: cp pages_history/history/* test-results && cp -r pages_history/history test-results
+      - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
       - name: Store allure history
         uses: actions/upload-artifact@v3
         with:
-          name: test-results
+          name: allure-results
           path:
-            test-results
+            allure-results
           retention-days: 1
 
   test:
@@ -81,16 +81,16 @@ jobs:
         uses: actions/download-artifact@v3
       - name: first_test
         if: "github.event.inputs.deployment_target == 'first_test'"
-        run: pytest tests/test_button.py::test_button_exist --alluredir=test-results
+        run: pytest tests/test_button.py::test_button_exist --alluredir=allure-results
       - name: second_test
         if: "github.event.inputs.deployment_target == 'second_test'"
-        run: pytest tests/test_button.py::test_button_exist_2 --alluredir=test-results
+        run: pytest tests/test_button.py::test_button_exist_2 --alluredir=allure-results
       - name: Store allure results
         uses: actions/upload-artifact@v3
         with:
-          name: test-results
+          name: allure-results
           path:
-            test-results
+            allure-results
           retention-days: 1
 
   generate-report:
@@ -105,7 +105,7 @@ jobs:
       - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz && sudo tar -zxvf allure-2.29.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
       - name: Dowmload all workflow run artifacts
         uses: actions/download-artifact@v3
-      - run: allure generate -c test-results -o _site
+      - run: allure generate -c allure-results -o _site
       - name: Store generated report
         uses: actions/upload-artifact@v3
         with:
