--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -27,12 +27,13 @@ jobs:
         with:
           python-version: "3.10"
       - run: >
-          ARTIFACT_ID=$(curl -L
+          response=$(curl -L
           -H "Accept: application/vnd.github+json" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
-          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results" 
-          | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);") 
-          &&
+          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
+          echo $response
+          ARTIFACT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
+          echo $ARTIFACT_ID
           curl -L
           -H "Accept: application/vnd.github+json" 
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" 
@@ -40,12 +41,13 @@ jobs:
           https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip 
           -o artifacts.zip
       - run: >
-          REPORT_ID=$(curl -L 
+          response=$(curl -L 
           -H "Accept: application/vnd.github+json" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
-          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages" 
-          | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);") 
-          &&
+          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
+          echo $response
+          REPORT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
+          echo $REPORT_ID
           curl -L 
           -H "Accept: application/vnd.github+json" 
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" 
@@ -116,14 +118,4 @@ jobs:
           retention-days: 1
 
   publish-report:
-    runs-on: ubuntu-latest
-    needs: generate-report
-    name: Publish report
-    steps:
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1.2.9
+    runs-on: ub
