--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -26,33 +26,33 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
-      - run: >
-          response=$(curl -L
-          -H "Accept: application/vnd.github+json" 
-          -H "X-GitHub-Api-Version: 2022-11-28" 
+      - run: |
+          response=$(curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
           echo $response
           ARTIFACT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
           echo $ARTIFACT_ID
-          curl -L
-          -H "Accept: application/vnd.github+json" 
-          -H "Authorization: Bearer ${{ secrets.TOKEN }}" 
-          -H "X-GitHub-Api-Version: 2022-11-28" 
-          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip 
+          curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip \
           -o artifacts.zip
-      - run: >
-          response=$(curl -L 
-          -H "Accept: application/vnd.github+json" 
-          -H "X-GitHub-Api-Version: 2022-11-28" 
+      - run: |
+          response=$(curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
           echo $response
           REPORT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
           echo $REPORT_ID
-          curl -L 
-          -H "Accept: application/vnd.github+json" 
-          -H "Authorization: Bearer ${{ secrets.TOKEN }}" 
-          -H "X-GitHub-Api-Version: 2022-11-28" 
-          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$REPORT_ID/zip 
+          curl -L \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$REPORT_ID/zip \
           -o pages.zip
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
@@ -80,7 +80,7 @@ jobs:
         run: sudo apt-get install google-chrome-stable
       - name: install dependencies
         run: pip install -r requirements.txt
-      - name: Dowmload all workflow run artifacts
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - name: first_test
         if: "github.event.inputs.deployment_target == 'first_test'"
@@ -106,7 +106,7 @@ jobs:
           distribution: 'microsoft'
           java-version: '17'
       - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz && sudo tar -zxvf allure-2.29.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
-      - name: Dowmload all workflow run artifacts
+      - name: Download all workflow run artifacts
         uses: actions/download-artifact@v3
       - run: allure generate -c allure-results -o _site
       - name: Store generated report
@@ -118,4 +118,14 @@ jobs:
           retention-days: 1
 
   publish-report:
-    runs-on: ub
+    runs-on: ubuntu-latest
+    needs: generate-report
+    name: Publish report
+    steps:
+      - name: Download all workflow run artifacts
+        uses: actions/download-artifact@v3
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@v2
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1.2.9
