--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -14,6 +14,7 @@ on:
 
 permissions:
   contents: read
+  actions: read
   pages: write
   id-token: write
 
@@ -26,33 +27,43 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.10"
+      - name: Install jq
+        run: sudo apt-get install -y jq
       - run: |
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
-          echo $response
-          ARTIFACT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
-          echo $ARTIFACT_ID
+          echo "Response: $response"
+          ARTIFACT_ID=$(echo $response | jq -r '.artifacts[0].id')
+          if [ "$ARTIFACT_ID" == "null" ]; then
+            echo "Artifact not found"
+            exit 1
+          fi
+          echo "Artifact ID: $ARTIFACT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip \
+          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip" \
           -o artifacts.zip
       - run: |
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
-          echo $response
-          REPORT_ID=$(echo $response | python -c "import sys, json; response=json.load(sys.stdin); print(response['artifacts'][0]['id']) if 'artifacts' in response and len(response['artifacts']) > 0 else exit(1);")
-          echo $REPORT_ID
+          echo "Response: $response"
+          REPORT_ID=$(echo $response | jq -r '.artifacts[0].id')
+          if [ "$REPORT_ID" == "null" ]; then
+            echo "Report artifact not found"
+            exit 1
+          fi
+          echo "Report ID: $REPORT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
-          https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$REPORT_ID/zip \
+          "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$REPORT_ID/zip" \
           -o pages.zip
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
@@ -77,7 +88,7 @@ jobs:
         with:
           python-version: "3.10"
       - name: Install Chrome
-        run: sudo apt-get install google-chrome-stable
+        run: sudo apt-get install -y google-chrome-stable
       - name: install dependencies
         run: pip install -r requirements.txt
       - name: Download all workflow run artifacts
