--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -30,13 +30,15 @@ jobs:
       - name: Install jq
         run: sudo apt-get install -y jq
       - run: |
+          echo "Fetching allure-results artifact ID..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
           echo "Response: $response"
           ARTIFACT_ID=$(echo $response | jq -r '.artifacts[0].id')
-          if [ "$ARTIFACT_ID" == "null" ]; then
+          if [ -z "$ARTIFACT_ID" ]; then
             echo "Artifact not found"
             exit 1
           fi
@@ -44,17 +46,18 @@ jobs:
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip" \
           -o artifacts.zip
       - run: |
+          echo "Fetching github-pages artifact ID..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
+          -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
           echo "Response: $response"
           REPORT_ID=$(echo $response | jq -r '.artifacts[0].id')
-          if [ "$REPORT_ID" == "null" ]; then
+          if [ -z "$REPORT_ID" ]; then
             echo "Report artifact not found"
             exit 1
           fi
@@ -62,7 +65,6 @@ jobs:
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
-          -H "X-GitHub-Api-Version: 2022-11-28" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$REPORT_ID/zip" \
           -o pages.zip
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results
