--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,10 +1,10 @@
-name: Automated tests
+name: Автоматизированные тесты
 
 on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        description: Choose target
+        description: Выберите цель
         required: true
         default: second_test
         type: choice
@@ -21,47 +21,50 @@ permissions:
 jobs:
   download-history:
     runs-on: ubuntu-latest
-    name: Download history
+    name: Загрузка истории
     steps:
-      - name: setup Python
-        uses: actions/setup-python@v4
+      - name: Установка Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Install jq
+      - name: Установка jq
         run: sudo apt-get install -y jq
       - run: |
-          echo "Fetching allure-results artifact ID..."
+          echo "Получение идентификатора артефакта allure-results..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
-          echo "Response: $response"
+          echo "Ответ: $response"
           ARTIFACT_ID=$(echo $response | jq -r '.artifacts[0].id')
           if [ -z "$ARTIFACT_ID" ]; then
-            echo "Artifact not found"
+            echo "Артефакт не найден"
             exit 1
           fi
-          echo "Artifact ID: $ARTIFACT_ID"
+          echo "Идентификатор артефакта: $ARTIFACT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts/$ARTIFACT_ID/zip" \
           -o artifacts.zip
+          ls -lh
+          unzip -l artifacts.zip
+          unzip artifacts.zip -d allure-results || exit 1
       - run: |
-          echo "Fetching github-pages artifact ID..."
+          echo "Получение идентификатора артефакта github-pages..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
-          echo "Response: $response"
+          echo "Ответ: $response"
           REPORT_ID=$(echo $response | jq -r '.artifacts[0].id')
           if [ -z "$REPORT_ID" ]; then
-            echo "Report artifact not found"
+            echo "Артефакт отчета не найден"
             exit 1
           fi
-          echo "Report ID: $REPORT_ID"
+          echo "Идентификатор отчета: $REPORT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
@@ -70,75 +73,10 @@ jobs:
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
       - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
-      - name: Store allure history
+      - name: Сохранение истории allure
         uses: actions/upload-artifact@v3
         with:
           name: allure-results
           path:
             allure-results
           retention-days: 1
-
-  test:
-    runs-on: ubuntu-latest
-    needs: download-history
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-      - name: setup Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Install Chrome
-        run: sudo apt-get install -y google-chrome-stable
-      - name: install dependencies
-        run: pip install -r requirements.txt
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - name: first_test
-        if: "github.event.inputs.deployment_target == 'first_test'"
-        run: pytest tests/test_button.py::test_button_exist --alluredir=allure-results
-      - name: second_test
-        if: "github.event.inputs.deployment_target == 'second_test'"
-        run: pytest tests/test_button.py::test_button_exist_2 --alluredir=allure-results
-      - name: Store allure results
-        uses: actions/upload-artifact@v3
-        with:
-          name: allure-results
-          path:
-            allure-results
-          retention-days: 1
-
-  generate-report:
-    runs-on: ubuntu-latest
-    needs: test
-    name: Generate report
-    steps:
-      - uses: actions/setup-java@v3
-        with:
-          distribution: 'microsoft'
-          java-version: '17'
-      - run: sudo wget https://github.com/allure-framework/allure2/releases/download/2.29.0/allure-2.29.0.tgz && sudo tar -zxvf allure-2.29.0.tgz -C /opt/ && sudo ln -s /opt/allure-2.29.0/bin/allure /usr/bin/allure
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - run: allure generate -c allure-results -o _site
-      - name: Store generated report
-        uses: actions/upload-artifact@v3
-        with:
-          name: _site
-          path:
-            _site
-          retention-days: 1
-
-  publish-report:
-    runs-on: ubuntu-latest
-    needs: generate-report
-    name: Publish report
-    steps:
-      - name: Download all workflow run artifacts
-        uses: actions/download-artifact@v3
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v1.2.9
