--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -1,10 +1,10 @@
-name: Автоматизированные тесты
+name: Automated tests
 
 on:
   workflow_dispatch:
     inputs:
       deployment_target:
-        description: Выберите цель
+        description: Choose target
         required: true
         default: second_test
         type: choice
@@ -21,28 +21,28 @@ permissions:
 jobs:
   download-history:
     runs-on: ubuntu-latest
-    name: Загрузка истории
+    name: Download history
     steps:
-      - name: Установка Python
+      - name: setup Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.10"
-      - name: Установка jq
+      - name: Install jq
         run: sudo apt-get install -y jq
       - run: |
-          echo "Получение идентификатора артефакта allure-results..."
+          echo "Fetching allure-results artifact ID..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=allure-results")
-          echo "Ответ: $response"
+          echo "Response: $response"
           ARTIFACT_ID=$(echo $response | jq -r '.artifacts[0].id')
           if [ -z "$ARTIFACT_ID" ]; then
-            echo "Артефакт не найден"
+            echo "Artifact not found"
             exit 1
           fi
-          echo "Идентификатор артефакта: $ARTIFACT_ID"
+          echo "Artifact ID: $ARTIFACT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
@@ -52,19 +52,19 @@ jobs:
           unzip -l artifacts.zip
           unzip artifacts.zip -d allure-results || exit 1
       - run: |
-          echo "Получение идентификатора артефакта github-pages..."
+          echo "Fetching github-pages artifact ID..."
           response=$(curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
           "https://api.github.com/repos/ReckeYi/Github_Automated_test/actions/artifacts?name=github-pages")
-          echo "Ответ: $response"
+          echo "Response: $response"
           REPORT_ID=$(echo $response | jq -r '.artifacts[0].id')
           if [ -z "$REPORT_ID" ]; then
-            echo "Артефакт отчета не найден"
+            echo "Report artifact not found"
             exit 1
           fi
-          echo "Идентификатор отчета: $REPORT_ID"
+          echo "Report ID: $REPORT_ID"
           curl -L \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.TOKEN }}" \
@@ -73,7 +73,7 @@ jobs:
       - run: mkdir allure-results && unzip artifacts.zip -d allure-results
       - run: mkdir old_pages pages_history && unzip pages.zip -d old_pages && tar -xvf old_pages/artifact.tar -C pages_history
       - run: cp pages_history/history/* allure-results && cp -r pages_history/history allure-results
-      - name: Сохранение истории allure
+      - name: Store allure history
         uses: actions/upload-artifact@v3
         with:
           name: allure-results
